updates to repo links

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                     Build a basic portfolio using HTML & CSS.</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <a href="https://and-rasta.github.io/Basic-Portfolio/index.html"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                          <a href="https://github.com/And-Rasta/Basic-Portfolio"><button type="button" class="btn btn-info"><i class="fab fa-github"></i>Repo</button></a>
+                        <a href="https://and-rasta.github.io/Basic-Portfolio/index.html"><button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
+                          <a href="https://github.com/And-Rasta/Basic-Portfolio"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">09/22/18</small>
                   </div>
@@ -103,8 +103,8 @@
                     Add Bootstrap & Responsiveness to Portfolio.</p>                  
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="https://and-rasta.github.io/Responsive-Portfolio/portfolio.html"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/Bootstrap-Portfolio"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
+                      <a href="https://and-rasta.github.io/Responsive-Portfolio/portfolio.html"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="far fa-stars"></i> Site</button></a>
+                      <a href="https://github.com/And-Rasta/Bootstrap-Portfolio"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">09/29/18</small>
                   </div>
@@ -121,7 +121,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                         <a href="https://and-rasta.github.io/Word-Guess-Game/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/Word-Guess-Game"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
+                      <a href="https://github.com/And-Rasta/Word-Guess-Game"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">10/06/18</small>
                   </div>
@@ -138,7 +138,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/unit-4-game/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/unit-4-game"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
+                      <a href="https://github.com/And-Rasta/unit-4-game"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">10/13/18</small>
                   </div>
@@ -155,7 +155,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/TriviaGame/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/TriviaGame"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
+                      <a href="https://github.com/And-Rasta/TriviaGame"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">10/20/18</small>
                   </div>
@@ -172,7 +172,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/GifTastic/"> <button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/GifTastic"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
+                      <a href="https://github.com/And-Rasta/GifTastic"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">10/27/18</small>
                   </div>
@@ -189,7 +189,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/TrainScheduler/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/TrainScheduler"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
+                      <a href="https://github.com/And-Rasta/TrainScheduler"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">11/03/18</small>
                   </div>
@@ -205,7 +205,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <a href="https://and-rasta.github.io/Dothrakify/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                      <a href="https://github.com/And-Rasta/Dothrakify"> <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
+                      <a href="https://github.com/And-Rasta/Dothrakify"> <button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">11/10/18</small>
                   </div>
@@ -222,7 +222,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button>
+                      <button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button>
                     </div>
                     <small class="text-muted">11/28/18</small>
                   </div>
@@ -240,7 +240,7 @@
                   <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
                         <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Repo</button>
+                        <button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button>
                       </div>
                       <small class="text-muted">12/15/18</small>
                     </div>
@@ -258,7 +258,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                           <a href="https://polar-beach-64550.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                          <a href="https://github.com/And-Rasta/Frens"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
+                          <a href="https://github.com/And-Rasta/Frens"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                         </div>
                         <small class="text-muted">12/22/18</small>
                       </div>
@@ -275,7 +275,7 @@
                       <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
                             <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                            <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
+                            <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                           </div>
                           <small class="text-muted">1/12/19</small>
                         </div>
@@ -291,7 +291,7 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                               <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                              <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
+                              <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                             </div>
                             <small class="text-muted">1/26/19</small>
                           </div>
@@ -308,7 +308,7 @@
                           <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
                                 <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                                <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary">Repo</button></a>
+                                <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                               </div>
                               <small class="text-muted">2/9/19</small>
                             </div>
@@ -325,7 +325,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                   <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
-                                  <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="fab fa-github"></i>Repo</button></a>
+                                  <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                                 </div>
                                 <small class="text-muted">2/16/19</small>
                               </div>
