updates to repo links

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     Add Bootstrap & Responsiveness to Portfolio.</p>                  
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="https://and-rasta.github.io/Responsive-Portfolio/portfolio.html"><button type="button" class="btn btn-sm btn-outline-secondary"><i class="far fa-stars"></i> Site</button></a>
+                      <a href="https://and-rasta.github.io/Responsive-Portfolio/portfolio.html"><button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
                       <a href="https://github.com/And-Rasta/Bootstrap-Portfolio"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">09/29/18</small>
@@ -120,7 +120,7 @@
                     <p>Use HTML, CSS, Bootstrap CSS Framework, JavaScript, and jQuery.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <a href="https://and-rasta.github.io/Word-Guess-Game/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                        <a href="https://and-rasta.github.io/Word-Guess-Game/"><button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
                       <a href="https://github.com/And-Rasta/Word-Guess-Game"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">10/06/18</small>
@@ -137,7 +137,7 @@
                     Build a Crystal Collector game.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="https://and-rasta.github.io/unit-4-game/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                      <a href="https://and-rasta.github.io/unit-4-game/"><button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
                       <a href="https://github.com/And-Rasta/unit-4-game"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">10/13/18</small>
@@ -154,7 +154,7 @@
                     <p>Use HTML, CSS, Bootstrap CSS Framework, JavaScript, and jQuery.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="https://and-rasta.github.io/TriviaGame/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                      <a href="https://and-rasta.github.io/TriviaGame/"><button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
                       <a href="https://github.com/And-Rasta/TriviaGame"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">10/20/18</small>
@@ -171,7 +171,7 @@
                     <p>Use GIPHY API; Call the API & use JavaScript & jQuery to update the site HTML.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="https://and-rasta.github.io/GifTastic/"> <button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                      <a href="https://and-rasta.github.io/GifTastic/"> <button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
                       <a href="https://github.com/And-Rasta/GifTastic"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">10/27/18</small>
@@ -188,7 +188,7 @@
                     Create a train scheduler app incorporating Firebase to host arrival & departure data. Retrieve and manipulate the info with Moment.js</p>  
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="https://and-rasta.github.io/TrainScheduler/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                      <a href="https://and-rasta.github.io/TrainScheduler/"><button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
                       <a href="https://github.com/And-Rasta/TrainScheduler"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">11/03/18</small>
@@ -204,7 +204,7 @@
                     Dothrakify - Translate song lyrics into Dothraki, using HTML, CSS/Bootstrap Framework, JavaScript, jQuery, & multiple ajax calls using the MusixMatch and Fun Translation APIs</p>                      
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <a href="https://and-rasta.github.io/Dothrakify/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                      <a href="https://and-rasta.github.io/Dothrakify/"><button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
                       <a href="https://github.com/And-Rasta/Dothrakify"> <button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                     </div>
                     <small class="text-muted">11/10/18</small>
@@ -221,7 +221,7 @@
                     <p>Build a CLI application using JavaScript, Moment.js, DotEnv, Node-Spotify-Api and Axios with multiple API Calls.</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
+                      <button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button>
                       <button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button>
                     </div>
                     <small class="text-muted">11/28/18</small>
@@ -239,7 +239,7 @@
                       <p>Build a CLI application using JavaScript, Node.js, MySQL, and MySQL and Inquirer Node Modules.</p>                     
                   <div class="d-flex justify-content-between align-items-center">
                       <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Site</button>
+                        <button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button>
                         <button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button>
                       </div>
                       <small class="text-muted">12/15/18</small>
@@ -257,7 +257,7 @@
                         <p>Build a web application to match friends, using JavaScrtipt, jQuery, HTML, CSS, Bootstrap CSS Framework, Node.js, and Express.js. Deploy to Heroku.</p>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <a href="https://polar-beach-64550.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                          <a href="https://polar-beach-64550.herokuapp.com/"><button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
                           <a href="https://github.com/And-Rasta/Frens"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                         </div>
                         <small class="text-muted">12/22/18</small>
@@ -274,7 +274,7 @@
                           <p>Build a web application to add/devour burgers, using HTML, CSS/Bootstrap CSS Framework, Node.js, Express.js, Handlebars.js, and MySQL. Deploy to Heroku.</p>
                       <div class="d-flex justify-content-between align-items-center">
                           <div class="btn-group">
-                            <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                            <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
                             <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                           </div>
                           <small class="text-muted">1/12/19</small>
@@ -290,7 +290,7 @@
                             TBD</p>  
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                              <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                              <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
                               <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                             </div>
                             <small class="text-muted">1/26/19</small>
@@ -307,7 +307,7 @@
                               TBD</p>  
                           <div class="d-flex justify-content-between align-items-center">
                               <div class="btn-group">
-                                <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                                <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
                                 <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                               </div>
                               <small class="text-muted">2/9/19</small>
@@ -324,7 +324,7 @@
                                 TBD</p>  
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
-                                  <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-sm btn-outline-secondary">Site</button></a>
+                                  <a href="https://morning-springs-93758.herokuapp.com/"><button type="button" class="btn btn-success"><i class="far fa-stars"></i> Site</button></a>
                                   <a href="https://github.com/And-Rasta/Burger"><button type="button" class="btn btn-info"><i class="fab fa-github"></i> Repo</button></a>
                                 </div>
                                 <small class="text-muted">2/16/19</small>
